force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/TSS_StickIt_MR1__stickIt_defaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>stickIt Defaults</label>
</CustomObject>