force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Auto_Attach__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Auto_Attach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, save label preview automatically when a label is printed.</description>
    <inlineHelpText>If checked, save label preview automatically when a label is printed.</inlineHelpText>
    <label>Auto Attach</label>
    <type>Checkbox</type>
</CustomField>