force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Auto_Log__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Auto_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, attach activity record automatically when a label is printed.</description>
    <inlineHelpText>If checked, attach activity record automatically when a label is printed.</inlineHelpText>
    <label>Auto Log</label>
    <type>Checkbox</type>
</CustomField>