force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Field_API_Name__c</fullName>
    <description>API Field Name associated with the stickIt Defaults custom setting record.</description>
    <inlineHelpText>Enter the API Name of the Field associated with this stickIt Defaults custom setting.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>