force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Level__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Level__c</fullName>
    <description>Level this setting applies to (Organization, Profile, or User). If profile or user, this field should contain the profile/user Id.</description>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>