force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Level_ID__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Level_ID__c</fullName>
    <description>ID of Profile or User this default setting is associated with.</description>
    <label>Level ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>