force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Log_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Log_Activity_Subject__c</fullName>
    <label>Log Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>