force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Object__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Object__c</fullName>
    <description>API Object Name associated with the stickIt Defaults custom setting record.</description>
    <inlineHelpText>Enter the API Name of the Object associated with this stickIt Defaults custom setting.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>