force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Printer__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Printer__c</fullName>
    <label>Printer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>