force-app/main/default/objects/TSS_StickIt_MR1__stickIt_defaults__c/fields/TSS_StickIt_MR1__Template__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Template__c</fullName>
    <description>18 character ID of the Document record containing the label template associated with the stickIt Defaults custom setting record.</description>
    <inlineHelpText>Enter the 18 character ID of the Document record containing the label template to be associated with this stickIt Defaults custom setting.</inlineHelpText>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>